[gd_scene load_steps=7 format=3 uid="uid://chegm7x5sl8rx"]

[ext_resource type="Script" path="res://screens/board.gd" id="1_ccqse"]
[ext_resource type="PackedScene" uid="uid://dcwtowpudpdv2" path="res://scenes/battlefield.tscn" id="2_mg76x"]
[ext_resource type="PackedScene" uid="uid://6tknyk37omdy" path="res://scenes/player_hand.tscn" id="3_u2ksf"]
[ext_resource type="PackedScene" uid="uid://vm1jd1gw330s" path="res://scenes/reserve.tscn" id="4_mb6ut"]
[ext_resource type="PackedScene" uid="uid://ccscfsp22jrsp" path="res://scenes/card_placeholder.tscn" id="5_brr7o"]
[ext_resource type="PackedScene" uid="uid://dwehldueqyfq5" path="res://scenes/kingdom.tscn" id="6_oavws"]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccqse")

[node name="Battlefield" parent="." instance=ExtResource("2_mg76x")]
layout_mode = 1
offset_left = -136.0
offset_right = -136.0
size_flags_horizontal = 0

[node name="PlayerHand" parent="." instance=ExtResource("3_u2ksf")]
layout_mode = 0
offset_left = 96.0
offset_top = 544.0
offset_right = 1248.0
offset_bottom = 736.0
scale = Vector2(0.5, 0.5)

[node name="HandLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 664.0
offset_right = 402.0
offset_bottom = 690.0
text = "Hand"

[node name="Reserve" parent="." instance=ExtResource("4_mb6ut")]
layout_mode = 0
offset_left = 712.0
offset_top = 384.0
offset_right = 1672.0
offset_bottom = 576.0
scale = Vector2(0.5, 0.5)

[node name="EnemyReserve" parent="." instance=ExtResource("4_mb6ut")]
offset_left = 712.0
offset_top = 32.0
offset_right = 1672.0
offset_bottom = 224.0
scale = Vector2(0.5, 0.5)
is_enemy = true

[node name="ReserveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 488.0
offset_right = 966.0
offset_bottom = 514.0
text = "Reserve"

[node name="Deck" parent="." instance=ExtResource("5_brr7o")]
offset_left = 80.0
offset_top = 320.0
offset_right = 80.0
offset_bottom = 320.0
label_text = "Deck"

[node name="Graveyard" parent="." instance=ExtResource("5_brr7o")]
offset_left = 80.0
offset_top = 112.0
offset_right = 80.0
offset_bottom = 112.0
label_text = "Graveyard"

[node name="Kingdom" parent="." instance=ExtResource("6_oavws")]
offset_left = 712.0
offset_top = 280.0
offset_right = 1672.0
offset_bottom = 472.0
scale = Vector2(0.5, 0.5)

[node name="EnemyKingdom" parent="." instance=ExtResource("6_oavws")]
offset_left = 712.0
offset_top = 136.0
offset_right = 1672.0
offset_bottom = 328.0
scale = Vector2(0.5, 0.5)
is_enemy = true

[node name="KingdomLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 243.0
offset_right = 973.0
offset_bottom = 269.0
text = "Kingdom
"

[node name="Instruction" type="Label" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 560.0
offset_right = 1192.0
offset_bottom = 624.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 496.0
offset_top = 296.0
offset_right = -496.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Art Of War"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
